Fix alignment of buttons on FlashcardPage

--- a/src/pages/FlashCard.module.css
+++ b/src/pages/FlashCard.module.css
@@ -144,10 +144,9 @@ h2 {
 .btnSection {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  width: 75%;
+  justify-content: space-around;
+  width: 90%;
   padding: 10px 20px;
-  margin-left: 145px;
 }
 
 .navButtons {
